sqlx migrate init

--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = { workspace = true }
 axum = { workspace = true }
 serde = { workspace = true }
 serde_yaml = { workspace = true }
-sqlx = { workspace = true }
+sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls"] }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
