--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -2,6 +2,7 @@
 name = "chat-server"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -9,12 +10,17 @@ edition = "2021"
 anyhow = { workspace = true }
 argon2 = { version = "0.5.3", features = ["std"] }
 axum = { workspace = true }
-chrono = {  version = "0.4.38", features = ["serde"] }
-serde = { workspace = true }
+chrono = { version = "0.4.38", features = ["serde"] }
+jwt-simple = "0.12.9"
+serde = { workspace = true, features = ["derive"] }
+serde_json = "1.0.125"
 serde_yaml = { workspace = true }
-sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls"] }
-sqlx-db-tester = "0.4.2"
+sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
 thiserror.workspace = true
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+
+[dev-dependencies]
+http-body-util = "0.1.1"
+sqlx-db-tester = "0.4.0"
