--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -18,8 +18,11 @@ serde_yaml = { workspace = true }
 sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
 thiserror.workspace = true
 tokio = { workspace = true }
+tower = "0.5.0"
+tower-http = { version = "0.5.2", features = ["compression-br", "compression-gzip", "compression-deflate", "trace"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+uuid = { version = "1.10.0", features = ["v7", "serde"] }
 
 [dev-dependencies]
 http-body-util = "0.1.1"
