--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT"
 anyhow = { workspace = true }
 argon2 = { version = "0.5.3", features = ["std"] }
 axum = { workspace = true }
+axum-extra = { version = "0.9.3", features = ["typed-header"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 jwt-simple = "0.12.9"
 serde = { workspace = true, features = ["derive"] }
