--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -19,7 +19,7 @@ serde_yaml = { workspace = true }
 sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
 thiserror.workspace = true
 tokio = { workspace = true }
-tower = "0.5.0"
+tower = { version = "0.5.0", features = ["util"] }
 tower-http = { version = "0.5.2", features = ["compression-br", "compression-gzip", "compression-deflate", "trace"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
