--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["chat_server", "notify_server"]
+members = [ "chat_core", "chat_server", "notify_server"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -18,3 +18,9 @@ thiserror = "1.0.59"
 tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+chat-core = { path = "./chat_core" }
+jwt-simple = "0.12.9"
+axum-extra = { version = "0.9.3", features = ["typed-header"] }
+chrono = { version = "0.4.38", features = ["serde"] }
+tower = { version = "0.5.0", features = ["util"] }
+tower-http = { version = "0.5.2", features = ["compression-br", "compression-gzip", "compression-deflate", "trace", "fs"] }
