--- a/notify_server/Cargo.toml
+++ b/notify_server/Cargo.toml
@@ -19,3 +19,4 @@ tokio = { workspace = true }
 tokio-stream = "0.1.15"
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+chat-core = {workspace = true }
