--- a/notify_server/Cargo.toml
+++ b/notify_server/Cargo.toml
@@ -16,7 +16,10 @@ serde_yaml = { workspace = true }
 sqlx = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
-tokio-stream = "0.1.15"
+tokio-stream = { version = "0.1.15", features = ["sync"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 chat-core = {workspace = true }
+jwt-simple = { workspace = true }
+dashmap = "6.0.1"
+serde_json = "1.0.127"
