--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = [ "chat_core", "chat_server", "notify_server"]
+members = [ "chat_core", "chat_server", "chat_test", "notify_server"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -11,7 +11,7 @@ axum = { version = "0.7.5", features = [
   "multipart",
   # "macros",
 ] }
-serde = { version = "1.0.198", features = ["derive"] }
+serde = { version = "1.0.209", features = ["derive"] }
 serde_yaml = "0.9.34"
 sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
 thiserror = "1.0.59"
@@ -24,3 +24,5 @@ axum-extra = { version = "0.9.3", features = ["typed-header"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 tower = { version = "0.5.0", features = ["util"] }
 tower-http = { version = "0.5.2", features = ["compression-br", "compression-gzip", "compression-deflate", "trace", "fs"] }
+chat-server = { path = "./chat_server" }
+notify-server = { path = "./notify_server" }
