--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -6,6 +6,10 @@ license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+test-util = ["http-body-util", "sqlx-db-tester"]
+
 [dependencies]
 anyhow = { workspace = true }
 argon2 = { version = "0.5.3", features = ["std"] }
@@ -24,7 +28,9 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 chat-core = {workspace = true }
+http-body-util = { version = "0.1.1", optional = true }
+sqlx-db-tester = { version = "0.4.0", optional = true }
+
 
 [dev-dependencies]
-http-body-util = "0.1.1"
-sqlx-db-tester = "0.4.0"
+chat-server = { workspace = true, features = ["test-util"] }
