--- a/chat_core/Cargo.toml
+++ b/chat_core/Cargo.toml
@@ -16,5 +16,6 @@ sqlx = { workspace = true }
 tokio = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
-tracing.workspace = true
+tracing = { workspace = true }
+utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
 uuid = { version = "1.10.0", features = ["v7", "serde"] }
